modificacion del index.html

--- a/INDEX.html
+++ b/INDEX.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mi primera web</title>
+		<title>Mi primera web 2.0</title>
 	</head>
 	<body>
 		<h1>TITULO GRANDE</h1>
